# OutlierFinder

./: README.md  pyproject.toml  setup.py
OutlierFinder/: OutlierFinder.py  __init__.py
